@@ -1,3 +1,8 @@
+2010-12-23  Chris Buccella  <buccella@linux.vnet.ibm.com>
+
+	* mofpp.c:
+	[ 3054618 ] mofpp is overaggressive when detecting comments
+
 2010-12-21  Chris Buccella  <buccella@linux.vnet.ibm.com>
 
 	* cimXmlRequest.c:
